--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #ac1a1a;
 }
 
 header {
     background-color: #333;
-    color: #fff;
+    color: #b80c0c;
     padding: 20px;
     text-align: center;
 }
