--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ section {
     padding: 20px;
     max-width: 800px;
     margin: 0 auto;
-    background-color: #edb7b7;
+    background-color: #eb3737;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
 }
