--- a/style.css
+++ b/style.css
@@ -133,5 +133,44 @@ span{
 .img-box img{
     border-radius: 50%;
     width: 400px;
+}
+::-webkit-scrollbar{   
+    width: 15px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: orangered;
+}
+::-webkit-scrollbar-track{
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 50px;
+}
 
+.about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 12% 8%;
+    gap: 10em;
+    background: black;
+}
+.about-img img{
+    position: relative;
+    width: 550px;
+    box-shadow: 0 0 25px orangered,
+                0 0 50px orangered;
+    border-radius: 50%;            
+}
+.about-content h2{
+    text-align: 62px;
+    color: white;
+    font-size: 42px;    
+}
+.about-content h3{
+    color: white;
+    font-size: 62px;    
+}
+.about-content p{
+    color: white;
+    font-size: 20px; 
+    margin: 2em 0 3em;   
 }
