--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ span{
 
 }
 .home-content p{
+    margin-bottom: 3em;
     font-size: 18px;
     margin: 25px 0 30px;
 }
@@ -227,7 +228,7 @@ span{
     text-align: center;
     border-radius: 50%;
     margin: 0 8px;
-    box-shadow: inset 0 0 orangered, 0 0 orangered;
+    box-shadow: inset 0 0 10px orangered, 0 0 10px orangered;
     transition: 0.3s ease;
 }
 .footer.social a:hover{
@@ -235,29 +236,29 @@ span{
     color: orangered;
     border: 2px soild orangered;
 }
-.footer ul{
-    margin-top: 0;
-    padding: 0;
-    font-size: 18px;
-    line-height: 1.6;
-    margin-bottom: 0;
-    text-align: center;
-}
-.footer ul li a{
-    color: white;
-    border-bottom: 3px solid transparent;
-    transition: 0.3s ease;
-}
-.footer ul li a:hover{
-    border-bottom: 3px solid orangered;
-}
-.footer ul li{
-    display: inline-block;
-    padding: 0 15px;
-}
-.footer .copyright{
-    margin-top: 15px;
-    text-align: center;
-    font-size: 12px;
-    color: white;
-}
+ .footer ul {
+            margin-top: 0;
+            padding: 0;
+            font-size: 18px;
+            line-height: 1.6;
+            margin-bottom: 0;
+            text-align: center;
+        }
+        .footer ul li a {
+            color: white;
+            border-bottom: 3px solid transparent;
+            transition: 0.3s ease;
+        }
+        .footer ul li a:hover {
+            border-bottom: 3px solid orangered;
+        }
+        .footer ul li {
+            display: inline-block;
+            padding: 0 15px;
+        }
+        .footer .copyright {
+            margin-top: 15px;
+            text-align: center;
+            font-size: 12px;
+            color: white;
+        }
