--- a/style.css
+++ b/style.css
@@ -12,22 +12,22 @@
     left: 0;
     width: 100%;
     padding: 35px 12%;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.6);
     backdrop-filter: blur(10px);
     display: flex;
     justify-content: space-between;
     align-items: center;
     z-index: 100;
 }
-.logo{
-    font-size: 25px;
+.logo{   
+    font-size: 35px;
     color: white;
     font-weight: 600;
     transition: 0.3s;
 }
 .logo:hover{
     color: blue;
-    text-shadow: 0 0 25px orangered,0 0 50px orangered;
+    text-shadow: 0 0 100px rgb(69, 69, 199),0 0 100px white;
     transform: scale(1,1);
 
 }
@@ -37,7 +37,7 @@ span{
 }
 
 .navbar a{
-    font-size: 10px;
+    font-size: 20px;
     color: white;
     font-weight: 500;
     margin: 0 20px;
@@ -47,8 +47,8 @@ span{
 
 .navbar a:hover,
 .navbar a.active{
-    color: orangered;
-    border-bottom: 3px solid orangered;
+    color: blue;
+    border-bottom: 3px solid blue;
 
 }
 .contact{
@@ -64,8 +64,8 @@ span{
 }
 
 .contact:hover{
-    background-color: orangered;
-    box-shadow: 0 0 25px orangered;
+    background-color: blue;
+    box-shadow: 0 0 25px blue;
     color: white;
 }
 
@@ -116,7 +116,7 @@ span{
 
 .btn-2{
     padding: 15px 28px;
-    background-color: orangered;
+    background-color: blue;
     color: white;
     border: 2px solid black;
     border-radius: 8px;
@@ -128,18 +128,18 @@ span{
 }
 .btn-2:hover{
     background-color: white;
-    color: orangered;
+    color: blue;
     
 }
-.img-box img{
-    border-radius: 50%;
-    width: 550px;
+.img-box img{   
+    border-radius: 30%;
+    width: 500px;
 }
 ::-webkit-scrollbar{   
     width: 15px;
 }
 ::-webkit-scrollbar-thumb{
-    background-color: orangered;
+    background-color: blue;
 }
 ::-webkit-scrollbar-track{
     background-color: rgba(0, 0, 0, 0.6);
@@ -220,7 +220,7 @@ span{
 .footer .social a{
     font-size: 24px;
     color: white;
-    border: 2px solid orangered;
+    border: 2px solid blue;
     width: 40px;
     height: 40px;
     line-height: 38px;
@@ -228,13 +228,13 @@ span{
     text-align: center;
     border-radius: 50%;
     margin: 0 8px;
-    box-shadow: inset 0 0 10px orangered, 0 0 10px orangered;
+    box-shadow: inset 0 0 10px blue, 0 0 10px blue;
     transition: 0.3s ease;
 }
 .footer.social a:hover{
     transform: scale(1,2)translateY(-10px);
-    color: orangered;
-    border: 2px soild orangered;
+    color: blue;
+    border: 2px soild blue;
 }
  .footer ul {
             margin-top: 0;
@@ -250,7 +250,7 @@ span{
             transition: 0.3s ease;
         }
         .footer ul li a:hover {
-            border-bottom: 3px solid orangered;
+            border-bottom: 3px solid blue;
         }
         .footer ul li {
             display: inline-block;
