--- a/style.css
+++ b/style.css
@@ -239,12 +239,21 @@ span{
     background-color: black;
 }
 
-.footer .social{
+.footer {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    padding: 40px 0;
+    background-color: black;
+}
+
+.footer .social {
     text-align: center;
     padding-bottom: 25px;
     color: white;   
 }
-.footer .social a{
+
+.footer .social a {
     font-size: 24px;
     color: white;
     border: 2px solid blue;
@@ -258,34 +267,40 @@ span{
     box-shadow: inset 0 0 10px blue, 0 0 10px blue;
     transition: 0.3s ease;
 }
-.footer.social a:hover{
-    transform: scale(1,2)translateY(-10px);
+
+.footer .social a:hover {
+    transform: scale(1.2) translateY(-10px);
     color: blue;
-    border: 2px soild blue;
+    border: 2px solid blue;
 }
+
 .footer ul {
-            margin-top: 0;
-            padding: 0;
-            font-size: 18px;
-            line-height: 1.6;
-            margin-bottom: 0;
-            text-align: center;
-        }
+    margin-top: 0;
+    padding: 0;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 0;
+    text-align: center;
+}
+
 .footer ul li a {
-            color: white;
-            border-bottom: 3px solid transparent;
-            transition: 0.3s ease;
-        }
+    color: white;
+    border-bottom: 3px solid transparent;
+    transition: 0.3s ease;
+}
+
 .footer ul li a:hover {
-            border-bottom: 3px solid blue;
-        }
+    border-bottom: 3px solid blue;
+}
+
 .footer ul li {
-            display: inline-block;
-            padding: 0 15px;
-        }
+    display: inline-block;
+    padding: 0 15px;
+}
+
 .footer .copyright {
-            margin-top: 15px;
-            text-align: center;
-            font-size: 12px;
-            color: white;
-        }
+    margin-top: 15px;
+    text-align: center;
+    font-size: 12px;
+    color: white;
+}
