--- a/style.css
+++ b/style.css
@@ -84,14 +84,18 @@ span{
     max-width: 800px;
 }
 .home-contact h3{
-    font-size: 42px;
+    font-size: 38px;
+    color:blue;
 }
 .home-contact h1{
-    font-size: 38px;
+    font-weight: 100px;
+    font-size: 45px;
     line-height: 1;
+    margin-bottom: 30px;
 
 }
 .btn-1{
+
     padding: 15px 28px;
     background-color: black;
     color: white;
@@ -159,11 +163,11 @@ span{
 .about-content h2{
     text-align: 62px;
     color: white;
-    font-size: 42px;    
+    font-size: 60px;    
 }
 .about-content h3{
     color: white;
-    font-size: 62px;    
+    font-size: 75px;    
 }
 .about-content p{
     color: white;
