--- a/style.css
+++ b/style.css
@@ -5,6 +5,18 @@
     font-family: 'Poppins','sans-serif';
     text-decoration: none;
     list-style: none;  
+    scroll-behavior: smooth;
+}
+.root{
+    --bg-color: #080808;
+    --second-bg-color: #101010;
+    --text-color: white;
+    --main-color: blue;
+}
+
+html{
+    font-size: 60%;
+    overflow-x: hidden;
 }
 .header{
     position: fixed;
@@ -172,7 +184,59 @@ span{
 .about-content p{
     color: white;
     font-size: 20px; 
-    margin: 2em 0 3em;   
+    margin: 2em 0 3em;  
+
+.heading{
+    text-align: center;
+    font-size: 7rem;
+    margin: 5rem 0;
+}
+
+.services{
+    background-color: var(--bg-color);
+    color: black;
+}
+
+.services h2{
+    color: var(--text-color);
+}
+
+.services-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    align-items: center;
+    gap: 2.5rem;
+}
+
+.services-box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--main-color);
+    height: 600px;
+    border-radius: 3rem;
+    cursor: pointer;
+    border: 3px solid transparent;
+    transition: 0.4s ease-in-out;
+}
+.services-box:hover{
+    background: var(--second-bg-color);
+    color: var(--main-color);
+    border: 5px solid var(--main-color);
+    transform: scale(1.03);
+}
+
+.service-info{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    padding: 5rem;
+}
+
+
+
 }
 .contact-form {
     display: flex;
