--- a/style.css
+++ b/style.css
@@ -66,6 +66,11 @@ span {
     border-bottom: 3px solid blue;
 }
 
+.navbar a.after {
+    color: blue;
+    border-bottom: 3px solid blue;
+}
+
 .contact {
     padding: 10px 28px;
     background-color: white;
@@ -229,7 +234,7 @@ span {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: blue;
+    background-color: rgb(2, 44, 65);
     height: 400px;
     border-radius: 3rem;
     cursor: pointer;
@@ -467,7 +472,7 @@ span {
 }
 
 
-@media (max-width: 400px) {
+@media (max-width: 480px) {
     .contact-form {
         flex-direction: column;
     }
